Added more styling

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Funda - Project 1</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="resources/style.css" rel="stylesheet" type="text/css">
@@ -15,12 +15,17 @@
     <body>
         <header role="banner">
             <nav role="navigation">
-                <img src="http://assets.fstatic.nl/792/assets/components/logo/funda-logo.svg">
+                <div class="logo">
+                    <img src="http://assets.fstatic.nl/792/assets/components/logo/funda-logo.svg">
+                </div>
                 <ul>
-                    <li>Inloggen</li>
-                    <li>Registreren</li>
+                    <li><a href="#">Inloggen</a></li>
+                    <li><a href="#">Registreren</a></li>
                 </ul>
             </nav>
+            <div class="search">
+                <input type="search"/>
+            </div>
         </header>
         
         <main role="main">
@@ -31,6 +36,26 @@
         </main>
 
         <footer>
+            <nav>
+                <ul> 
+                   <li>Service </li>
+                    <li><a href="#">Inloggen</a></li>
+                    <li><a href="#">Help</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+                <ul>
+                    <li>Huis op funda </li>
+                    <li><a href="#">Huis plaatsen</a></li>
+                    <li><a href="#">NVM makelaar</a></li>
+                    <li><a href="#">Bladeren</a></li>
+                </ul>
+                <ul>
+                    <li>Funda </li>
+                    <li><a href="#">Over funda</a></li>
+                    <li><a href="#">Vacatures</a></li>
+                    <li><a href="#">Adverteren</a></li>
+                </ul>
+            </nav>
             <nav>
                 <ul>
                     <li>© 2000–2016 funda — Powered by NVM </li>
