added debouncing (with underscore) and timeout

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <link href="resources/style.css" rel="stylesheet" type="text/css">
         <link rel="shortcut icon" type="image/png" href="resources/favicon.ico"/>
         
+        <script src="lib/underscore.js"></script>
+        
         <script src="js/utils.js"></script>
         <script src="js/listTemplate.js"></script>        
         <script src="js/searchCall.js"></script>
