--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
         <link rel="shortcut icon" type="image/png" href="resources/favicon.ico"/>
         
         <script src="lib/underscore.js"></script>
-        
+        <script src="lib/route.min.js"></script>
+
         <script src="js/utils.js"></script>
         <script src="js/listTemplate.js"></script>       
         <script src="js/productTemplate.js"></script>        
