--- a/index.html
+++ b/index.html
@@ -47,17 +47,17 @@
                     <li><label id="price-label"></label></li>
                     
                     <li><h3>Soort aanbod</h3></li>
-                    <li><input type="checkbox" id="offerrooms-1"/><label for="offerrooms-1">Woonhuis</label></li>
-                    <li><input type="checkbox" id="offerrooms-2"/><label for="offerrooms-2">Appartement</label></li>
+                    <li class="filter-checkbox"><input type="radio" name ="offerrooms" id="offerrooms-1"/><label for="offerrooms-1">Woonhuis</label></li>
+                    <li class="filter-checkbox"><input type="radio" name ="offerrooms" id="offerrooms-2"/><label for="offerrooms-2">Appartement</label></li>
                     <li><a href="#"> + Alle soorten aanbod</a></li>
                     
                     <li><h3>Aantal kamers</h3></li>
-                    <li><input type="checkbox" id="amountrooms-1"/><label for="amountrooms-1">2+</label></li>
-                    <li><input type="checkbox" id="amountrooms-2"/><label for="amountrooms-2">3+</label></li>
-                    <li><input type="checkbox" id="amountrooms-3"/><label for="amountrooms-3">4+</label></li>
-                    <li><input type="checkbox" id="amountrooms-4"/><label for="amountrooms-4">5+</label></li>
-                    <li><input type="checkbox" id="amountrooms-5"/><label for="amountrooms-5">6+</label></li>
-                    <li><input type="checkbox" id="amountrooms-6"/><label for="amountrooms-6">7+</label></li>
+                    <li class="filter-checkbox"><input type="radio" name ="amountrooms" id="amountrooms-1"/><label for="amountrooms-1">2+</label></li>
+                    <li class="filter-checkbox"><input type="radio" name ="amountrooms" id="amountrooms-2"/><label for="amountrooms-2">3+</label></li>
+                    <li class="filter-checkbox"><input type="radio" name ="amountrooms" id="amountrooms-3"/><label for="amountrooms-3">4+</label></li>
+                    <li class="filter-checkbox"><input type="radio" name ="amountrooms" id="amountrooms-4"/><label for="amountrooms-4">5+</label></li>
+                    <li class="filter-checkbox"><input type="radio" name ="amountrooms" id="amountrooms-5"/><label for="amountrooms-5">6+</label></li>
+                    <li class="filter-checkbox"><input type="radio" name ="amountrooms" id="amountrooms-6"/><label for="amountrooms-6">7+</label></li>
                     <li><a href="#"> + Alle soorten kamers</a></li>
                 </ul>
             </aside>
