load all images

--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@
                 <section id="product-details">
                 </section>
             </main>
+            <footer>
+                Toon meer afbeelding...
+            </footer>
         </div>
     </body>
 </html>
