--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
   <body>
+    <div class="mydiv">
+
     <audio id="audioplayer" preload controls loop>
     <source src="audio.mp3">
 </audio>
+</div>
 <script type="text/javascript">
     var audioTag = document.createElement('audio');
     if (!(!!(audioTag.canPlayType) && ("no" != audioTag.canPlayType("audio/mpeg")) && ("" != audioTag.canPlayType("audio/mpeg")))) {
