--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@ if (typeof jQuery == 'undefined') {
   </head>
   <body>
     <div class="mydiv">
+    Audio
     <audio id="audioplayer" preload controls loop>
       <source src="audio.mp3">
     </audio>
 
+      Video
       <video id="mainVid" class="video-js vjs-default-skin" controls
           preload="auto" width="640" height="480" poster="http://media02.hongkiat.com/code-fallback-methods/default_preview_img.png"
           data-setup="{}">
