--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
         </header>
         
         <div class="loader"></div>
+        <noscript>
+          <div>
+            Deze site vereist JavaScript om huizen te vertonen.
+          </div>
+        </noscript>        
                 
         <main role="main">
             <aside class="filter">
